--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "^4.3.2",
     "discord.js": "^13.2.0",
     "node-fetch": "^2.6.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.4.3",
     "web3": "^1.6.0"
   },
