--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.25.0",
     "debug": "^4.3.2",
     "discord.js": "^13.2.0",
+    "dotenv": "^16.0.2",
     "node-fetch": "^2.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.4.3",
