--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "ts-node src/launch.ts",
+  },
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -11,4 +14,6 @@
     "esModuleInterop": true,
     "strict": true
   }
+
+  
 }
